old_work/svn/gems/branches/rel_branch_3.6.X/artifacts/scripts/1404/iptables.rules
# Generated by iptables-save v1.4.4 on Fri May 18 13:47:11 2012
*filter
:INPUT ACCEPT [1574:461387]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1699:472705]
-A INPUT -i eth0 -p tcp -m tcp --dport 8085 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 7 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 12302 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 9191 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 2332 -j ACCEPT
-A INPUT -i eth0 -p udp -m udp -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type any -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --sport 8085 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --sport 7 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 389 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 12302 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 9191 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 2332 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j DROP 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 8085 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 7 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 389 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 12302 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 9191 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 2332 -m state --state NEW,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri May 18 13:47:11 2012
